# MyVideoPlayerDemo

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/chencl/cclplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CCLAudio.cpp  CCLAudio.h  CCLAudioChannel.cpp  CCLAudioChannel.h  CCLBasePlayer.cpp  CCLBasePlayer.h  CCLFFmpeg.cpp  CCLFFmpeg.h  CCLPlayStatus.cpp  CCLPlayStatus.h  CCLQueue.cpp  CCLQueue.h  CCLVideo.cpp  CCLVideo.h  CCLjni.cpp  CMakeLists.txt
app/src/main/cpp/calljava/: CCLJavaCall.cpp  CCLJavaCall.h
app/src/main/cpp/utils/: AndroidLog.h  CCLStataus.h
app/src/main/java/com/chencl/cclplayer/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/chencl/cclplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
